tests/golden/3-basic-and-simple-literals/invalid/common/bad-boolean-literals-1.yini
^ App
active      = enable     # ❌ Not a valid boolean literal
deactivated = disable    # ❌ Not a valid boolean literal
